[tool.poetry]
name = "HPWHsim-python-scripts"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
plotly = "*"
koozie = "*"
dimes = { path = "../../../dimes/", develop = true } # { git = "https://github.com/bigladder/dimes"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
