[tool.poetry]
name = "HPWHsim-python-scripts"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
plotly = "*"
koozie = "*"
dimes = { git = "https://github.com/bigladder/dimes"}
lattice = {git = "https://github.com/bigladder/lattice.git", branch = "add-basic-build-support"}

[tool.poetry.dev-dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

