[tool.poetry]
name = "HPWHsim-python-scripts"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
lattice = {git = "https://github.com/bigladder/lattice.git", rev = "c383d66be2fbd9c865b557cc511939449b5395e0"}

[tool.poetry.dev-dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"