[tool.poetry]
name = "hpwh-data-model"
version = "0.1.0"
description = ""
authors = ["Big Ladder Software"]

[tool.poetry.dependencies]
python = "^3.10"
#lattice = {path = "../../../lattice", develop = true}
lattice = {git = "https://github.com/bigladder/lattice.git", branch = "cpp-cleanup"}

[tool.poetry.dev-dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
