[project]
name = "data_model"
version = "0.1.0"
dependencies = [
    "cbor2 >= 5.6.5",
    "lattice",
    "jinja2"
]

[tool.uv.sources]
lattice = { git = "https://github.com/bigladder/lattice", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_model"]

