[project]
name = "HPWHsim-python-scripts"
version = "0.0.0"
description = ""
authors = []
requires-python = ">=3.10, <4.0"
dependencies = [
    "pandas",
    "plotly",
    "koozie",
    "dimes",
]

[tool.uv]

[tool.uv.sources]
dimes = { git = "https://github.com/bigladder/dimes#1b8082f06909d551b36e7b784816d7abd915b58a" }
