[project]
name = "plotting"
version = "0.1.0"
dependencies = [
    "pandas",
    "plotly",
    "koozie",
    "dimes"
]

[tool.uv.sources]
dimes = { git = "https://github.com/bigladder/dimes", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plotting"]

