[project]
name = "plotting"
version = "0.1.0"
dependencies = [
    "dash",
    "pandas",
    "plotly",
    "koozie",
    "dimes @ git+https://github.com/bigladder/dimes"
]

[project.scripts]
heater-logic = "plot_band_summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["plot_band_summary.py", "__init__.py"]

[tool.hatch.build.targets.sdist]
only-include = ["plot_band_summary.py", "__init__.py"]
